YH Multiple Changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@
             <a class="dropdown-item" href="/productcomponentlist/?filter=Condenstate Component">Condenstate Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Customer Supplied Radiator">Customer Supplied Radiator</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Cylinder">Cylinder</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Cylinder Location">Cylinder Location</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Double Handed Lift">Double Handed Lift</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Earth Spike">Earth Spike</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Electrical Pack">Electrical Pack</a>
@@ -71,11 +72,14 @@
             <a class="dropdown-item" href="/productcomponentlist/?filter=Plume Component">Plume Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Programmer Thermostat">Programmer Thermostat</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Radiator">Radiator</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Radiator Location">Radiator Location</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Radiator Style">Radiator Style</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Scaffolding">Scaffolding</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Scale Reducer">Scale Reducer</a>
             <!-- <a class="dropdown-item" href="/productcomponentlist/?filter=Special Lift">Special Lift</a> -->
             <a class="dropdown-item" href="/productcomponentlist/?filter=Thermostatic Radiator Valve">Thermostatic Radiator Valve</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Towel Rail">Towel Rail</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Towel Rail Location">Towel Rail Location</a>
           </div>
         </span>
         <li class="nav-item">
