--- a/templates/yourheat/orderforms/radiatorform.html
+++ b/templates/yourheat/orderforms/radiatorform.html
@@ -63,64 +63,64 @@
                         <td>Location</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_1}}</td>
-                        <td>{{wizard.form.radiator_style_1}}</td>
-                        <td>{{wizard.form.location_1}}</td>    
+                        <td>{{wizard.form.rad_1}}</td>
+                        <td>{{wizard.form.sty_1}}</td>
+                        <td>{{wizard.form.loc_1}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_2}}</td>
-                        <td>{{wizard.form.radiator_style_2}}</td>
-                        <td>{{wizard.form.location_2}}</td>    
+                        <td>{{wizard.form.rad_2}}</td>
+                        <td>{{wizard.form.sty_2}}</td>
+                        <td>{{wizard.form.loc_2}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_3}}</td>
-                        <td>{{wizard.form.radiator_style_3}}</td>
-                        <td>{{wizard.form.location_3}}</td>    
+                        <td>{{wizard.form.rad_3}}</td>
+                        <td>{{wizard.form.sty_3}}</td>
+                        <td>{{wizard.form.loc_3}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_4}}</td>
-                        <td>{{wizard.form.radiator_style_4}}</td>
-                        <td>{{wizard.form.location_4}}</td>    
+                        <td>{{wizard.form.rad_4}}</td>
+                        <td>{{wizard.form.sty_4}}</td>
+                        <td>{{wizard.form.loc_4}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_5}}</td>
-                        <td>{{wizard.form.radiator_style_5}}</td>
-                        <td>{{wizard.form.location_5}}</td>    
+                        <td>{{wizard.form.rad_5}}</td>
+                        <td>{{wizard.form.sty_5}}</td>
+                        <td>{{wizard.form.loc_5}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_6}}</td>
-                        <td>{{wizard.form.radiator_style_6}}</td>
-                        <td>{{wizard.form.location_6}}</td>    
+                        <td>{{wizard.form.rad_6}}</td>
+                        <td>{{wizard.form.sty_6}}</td>
+                        <td>{{wizard.form.loc_6}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_7}}</td>
-                        <td>{{wizard.form.radiator_style_7}}</td>
-                        <td>{{wizard.form.location_7}}</td>    
+                        <td>{{wizard.form.rad_7}}</td>
+                        <td>{{wizard.form.sty_7}}</td>
+                        <td>{{wizard.form.loc_7}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_8}}</td>
-                        <td>{{wizard.form.radiator_style_8}}</td>
-                        <td>{{wizard.form.location_8}}</td>    
+                        <td>{{wizard.form.rad_8}}</td>
+                        <td>{{wizard.form.sty_8}}</td>
+                        <td>{{wizard.form.loc_8}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_9}}</td>
-                        <td>{{wizard.form.radiator_style_9}}</td>
-                        <td>{{wizard.form.location_9}}</td>    
+                        <td>{{wizard.form.rad_9}}</td>
+                        <td>{{wizard.form.sty_9}}</td>
+                        <td>{{wizard.form.loc_9}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_10}}</td>
-                        <td>{{wizard.form.radiator_style_10}}</td>
-                        <td>{{wizard.form.location_10}}</td>    
+                        <td>{{wizard.form.rad_10}}</td>
+                        <td>{{wizard.form.sty_10}}</td>
+                        <td>{{wizard.form.loc_10}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_11}}</td>
-                        <td>{{wizard.form.radiator_style_11}}</td>
-                        <td>{{wizard.form.location_11}}</td>    
+                        <td>{{wizard.form.rad_11}}</td>
+                        <td>{{wizard.form.sty_11}}</td>
+                        <td>{{wizard.form.loc_11}}</td>    
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_12}}</td>
-                        <td>{{wizard.form.radiator_style_12}}</td>
-                        <td>{{wizard.form.location_12}}</td>    
+                        <td>{{wizard.form.rad_12}}</td>
+                        <td>{{wizard.form.sty_12}}</td>
+                        <td>{{wizard.form.loc_12}}</td>    
                     </tr>
                     
                 </table>
@@ -138,52 +138,52 @@
                         <td>Qty</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_1}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_1}}</td>
+                        <td>{{wizard.form.val_1}}</td>
+                        <td>{{wizard.form.vaq_1}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_2}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_2}}</td>
+                        <td>{{wizard.form.val_2}}</td>
+                        <td>{{wizard.form.vaq_2}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_3}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_3}}</td>
+                        <td>{{wizard.form.val_3}}</td>
+                        <td>{{wizard.form.vaq_3}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_4}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_4}}</td>
+                        <td>{{wizard.form.val_4}}</td>
+                        <td>{{wizard.form.vaq_4}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_5}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_5}}</td>
+                        <td>{{wizard.form.val_5}}</td>
+                        <td>{{wizard.form.vaq_5}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_6}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_6}}</td>
+                        <td>{{wizard.form.val_6}}</td>
+                        <td>{{wizard.form.vaq_6}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_7}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_7}}</td>
+                        <td>{{wizard.form.val_7}}</td>
+                        <td>{{wizard.form.vaq_7}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_8}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_8}}</td>
+                        <td>{{wizard.form.val_8}}</td>
+                        <td>{{wizard.form.vaq_8}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_9}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_9}}</td>
+                        <td>{{wizard.form.val_9}}</td>
+                        <td>{{wizard.form.vaq_9}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_10}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_10}}</td>
+                        <td>{{wizard.form.val_10}}</td>
+                        <td>{{wizard.form.vaq_10}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_11}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_11}}</td>
+                        <td>{{wizard.form.val_11}}</td>
+                        <td>{{wizard.form.vaq_11}}</td>
                     </tr>
                     <tr>
-                        <td>{{wizard.form.radiator_valve_12}}</td>
-                        <td>{{wizard.form.radiator_valve_quantity_12}}</td>
+                        <td>{{wizard.form.val_12}}</td>
+                        <td>{{wizard.form.vaq_12}}</td>
                     </tr>
                 </table>
             </div>
@@ -201,20 +201,20 @@
                         <td width="220px">Location</td>
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.towel_rail_1}}</td>
-                        <td width="220px">{{wizard.form.towel_rail_location_1}}</td>
+                        <td width="180px">{{wizard.form.tow_1}}</td>
+                        <td width="220px">{{wizard.form.trl_1}}</td>
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.towel_rail_2}}</td>
-                        <td width="220px">{{wizard.form.towel_rail_location_2}}</td>
+                        <td width="180px">{{wizard.form.tow_2}}</td>
+                        <td width="220px">{{wizard.form.trl_2}}</td>
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.towel_rail_3}}</td>
-                        <td width="220px">{{wizard.form.towel_rail_location_3}}</td>
+                        <td width="180px">{{wizard.form.tow_3}}</td>
+                        <td width="220px">{{wizard.form.trl_3}}</td>
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.towel_rail_4}}</td>
-                        <td width="220px">{{wizard.form.towel_rail_location_4}}</td>
+                        <td width="180px">{{wizard.form.tow_4}}</td>
+                        <td width="220px">{{wizard.form.trl_4}}</td>
                     </tr>
                 </table>
             </div>        
@@ -268,20 +268,29 @@
      var rads_req_checkbox = document.getElementById('id_7-radiator_specification_1');
      var thermo_rads_only_checkbox = document.getElementById('id_7-radiator_specification_2');
      var towel_rails_checkbox = document.getElementById('id_7-radiator_specification_3');
-     var cust_to_provide_checkbox = document.getElementById('id_7-radiator_specification_4');
+    //  var cust_to_provide_checkbox = document.getElementById('id_7-radiator_specification_4');
     
     if (no_rads_checkbox.checked) {
         document.getElementsByClassName("form-rad-group")[0].style.visibility = "hidden";
         document.getElementsByClassName("form-rad-valve-group")[0].style.visibility = "hidden";
         document.getElementsByClassName("form-towel-group")[0].style.visibility = "hidden";
+        document.getElementById("id_7-radiator_specification_1").checked = false;
+        document.getElementById("id_7-radiator_specification_2").checked = false;
+        document.getElementById("id_7-radiator_specification_3").checked = false;
     } 
     if (rads_req_checkbox.checked) {
         document.getElementsByClassName("form-rad-group")[0].style.visibility = "visible";
         document.getElementsByClassName("form-rad-valve-group")[0].style.visibility = "visible";
+        document.getElementById("id_7-radiator_specification_2").checked = false;
     }
     else {
         document.getElementsByClassName("form-rad-group")[0].style.visibility = "hidden";
         document.getElementsByClassName("form-rad-valve-group")[0].style.visibility = "hidden";
+    }
+
+    if (thermo_rads_only_checkbox.checked) {
+        document.getElementsByClassName("form-rad-group")[0].style.visibility = "hidden";
+        document.getElementById("id_7-radiator_specification_1").checked = false;
     }
 
     if (thermo_rads_only_checkbox.checked || rads_req_checkbox.checked) {
@@ -298,14 +307,14 @@
         document.getElementsByClassName("form-towel-group")[0].style.visibility = "hidden";
     } 
 
-    if (cust_to_provide_checkbox.checked) {
-        document.getElementsByClassName("form-rad-group")[0].style.visibility = "hidden";
-        document.getElementsByClassName("form-rad-valve-group")[0].style.visibility = "hidden";
-        document.getElementsByClassName("form-towel-group")[0].style.visibility = "hidden";
-        document.getElementsByClassName("form-cust-rad-qty")[0].style.visibility = "visible";
-    } else {
-        document.getElementsByClassName("form-cust-rad-qty")[0].style.visibility = "hidden";
-    }
+    // if (cust_to_provide_checkbox.checked) {
+    //     document.getElementsByClassName("form-rad-group")[0].style.visibility = "hidden";
+    //     document.getElementsByClassName("form-rad-valve-group")[0].style.visibility = "hidden";
+    //     document.getElementsByClassName("form-towel-group")[0].style.visibility = "hidden";
+    //     document.getElementsByClassName("form-cust-rad-qty")[0].style.visibility = "visible";
+    // } else {
+    //     document.getElementsByClassName("form-cust-rad-qty")[0].style.visibility = "hidden";
+    // }
 
     }
 
