--- a/static/css/yh.css
+++ b/static/css/yh.css
@@ -12,9 +12,11 @@
     /* font-family: 'Open Sans', sans-serif; */
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
-
 }
 
+body {
+   
+}
 
 .img--logo {
     height:40px;
@@ -64,6 +66,7 @@
         content: "01732 622990";
 
     }
+
 }
 
 div.break {
@@ -100,7 +103,7 @@ div.break {
 
 .page1-lower{
     position:absolute;
-    top: 550px;
+    top: 530px;
     width:100%;
     /* background-color: yellow; */
     text-align: center;
@@ -496,7 +499,19 @@ table.radiator-table {
 table.radiator-table th {
     font-size: 0.8rem;
     font-weight: 800;
-    width: 50%;
+    /* width: 50%; */
+}
+
+table.radiator-table td.col1 {
+    width:50%;
+}
+
+table.radiator-table td.col2 {
+    width:25%;
+}
+
+table.radiator-table td.col3 {
+    width:25%;
 }
 
 table.account-information {
@@ -567,6 +582,11 @@ p.account-details {
     width:7%;
 }
 
+#bom th.alt {
+    background-color: firebrick;
+    color: white;
+}
+
   #SalutAndRef {
     border-collapse: collapse;
     width: 100%;
@@ -611,4 +631,134 @@ p.account-details {
     width:10%;
     text-align: left;
 }
+
+
+/* Rory additions */
+
+.ob-orange-box{
+    border: 5px solid orange;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    /* margin: 50px 0px 0px 50px; */
+    height: 350px;
+    width: 640px;
+    padding: 20px;
+}
+
+.ob-top{
+    background-color: rgb(255, 255, 255);
+    height: 80px;
+    position: relative;
+}
+
+.ob-reference {
+    color:grey;
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: inline;
+    float: right;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.push-right {
+    position:relative;
+    left: 175px;
+}
+
+.ob-name {
+    color:grey;
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: inline;
+}
+
+.ob-text {
+    color:grey;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+.ob-top p span {
+    font-weight: 900;
+}
+
+.ob-left{
+    height: 285px;
+    float: left;
+    width: 49%;
+    /* border:2px solid black; */
+}
+
+.ob-boiler-left{
+    height: 260px;
+    float: left;
+    width: 45%;
+    position: relative;
+    top: 25px;
+    /* border:2px solid black; */
+}
+
+.ob-text-left{
+    height: 260px;
+    float: left;
+    width: 45%;
+    position: relative;
+    top: 25px;
+    left: 5px;
+    /* border:2px solid black; */
+}
+
+.price {
+    background-color: rgb(251,126,51);
+    border-radius: 8px 0px 8px 0px;
+    color:white;
+    font-size: 0.9rem;
+    font-weight: 500;
+    text-align: center;
+    width:150px;
+    padding: 5px 0px 5px 0px;
+}
+
+.name {
+    font-size: 0.9rem;
+    font-weight:300;
+    color:grey;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.features {
+    margin-left: 16px;
+    font-size: 0.7rem;
+    width:140px;
+}
+
+.ob-right{
+    height: 285px;
+    float: left;
+    width: 49%;
+}
+
+.ob-boiler-right{
+    height: 260px;
+    float: left;
+    width: 49%;
+    position: relative;
+    top: 25px;
+}
+
+.ob-text-right{
+
+    height: 260px;
+    float: left;
+    width: 45%;
+    position: relative;
+    top: 25px;
+    left: 5px;
+}
+
+
 
